# seizure_tracker

./: .ebignore  .gitignore  LICENSE.md  application.py  create_hist.ipynb  interval_info.pickle  make_graphs.py  pyproject.toml  readme.md  requirements.txt  run.sh  setup.py  statistical_params.py  testing_ideas.ipynb
.github/workflows/: codeql.yml  deploy-to-eb.yml  run_test.yml
env_files/: application.py  inout.py  make_graphs.py  statistical_params.py
tests/: constructors.py  test_statistical_params.py
tracker-app/: application.py  inout.py  make_graphs.py  statistical_params.py
trackerApp/: constants.py  inout.py  make_graphs.py  statistical_params.py
