[tool.poetry]
name = "trackerapp"
version = "0.1.0"
description = "'An app for tracking seizures'"
authors = ["''"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.14.3"
dash = "^1.19.0"
pandas = "^1.2.3"
gunicorn = "^20.1.0"
waitress = "^2.1.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
